# tarantas

./: Cargo.toml  README.md
.cargo/: config.toml
control/: Cargo.toml
control/.cargo/: config.toml
control/src/: input.rs  lib.rs  main.rs
control/src/network/: mod.rs  serial.rs
docs/: BOM.md  wiring.md
engine/firmware/: Cargo.toml
engine/firmware/src/: main.rs
engine/lib/: Cargo.toml
engine/lib/.cargo/: config.toml
engine/lib/src/: lib.rs
engine/lib/src/bus/: bus.rs  mod.rs
engine/lib/src/drivers/: chassis.rs  led.rs  mod.rs
engine/lib/src/drivers/sensors/: cliff.rs  distance.rs  encoder.rs  mod.rs
engine/lib/src/system/: error.rs  mod.rs  network.rs  reflex.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  lib.rs  movements.rs  sensors.rs  system.rs
protocol/src/codec/: mod.rs  tokio.rs
