[workspace]
resolver = "2"
members = [
    "protocol",
    "engine/lib",
    "engine/firmware",
    "control"
]

[workspace.dependencies]
log = "0.4"
defmt = { version = "1"}
defmt-rtt = "1.1"
static_cell = {  version = "2.1", features = ["nightly"] }

# STM32 related crates
embassy-stm32 = { version = "0.5", features = ["defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-tim5", "exti"] }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3" }

# Async with embassy
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-sync = { version = "0.7" }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
