[package]
name = "firmware"
version = "0.1.0"
edition = "2024"
resolver = "2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[dependencies]
engine = { path = "../lib" }

embassy-stm32 = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe = { version = "1", features = ["print-defmt"] }

cortex-m-rt = { version = "0.7" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }

embedded-hal-bus.workspace = true
