[package]
name = "engine"
description = "Engine node - library for the robot MCU controlling motors and sensors"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../../protocol" }

defmt.workspace = true
static_cell.workspace = true

embassy-stm32.workspace = true
embassy-time.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true

embedded-hal-bus.workspace = true

# distance sensor
vl53l0x = "1"
